Added Trilinos version requirement, due to switch to FECrsMatrix
Also, removed check for stk_classic, since it was long removed by
the time we got to trilinos version 12.17 (which is the version we
require now).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
 IF (DEFINED ALBANY_TRILINOS_DIR)
   SET(CMAKE_PREFIX_PATH ${ALBANY_TRILINOS_DIR} ${CMAKE_PREFIX_PATH})
 ENDIF()
-FIND_PACKAGE(Trilinos REQUIRED)
+FIND_PACKAGE(Trilinos 12.17 REQUIRED)
 
 OPTION (ALBANY_SUPPRESS_TRILINOS_WARNINGS "Whether or not Trilinos headers should be treated as 'system' headers (hence, without issuing warnings)" ON)
 
@@ -63,26 +63,10 @@ MESSAGE("-- Trilinos_CXX_COMPILER_FLAGS = ${Trilinos_CXX_COMPILER_FLAGS}")
 MESSAGE("End of Trilinos details\n")
 
 # Compress Trilinos lists that are used
-LIST(REVERSE Trilinos_INCLUDE_DIRS)
 LIST(REMOVE_DUPLICATES Trilinos_INCLUDE_DIRS)
-LIST(REVERSE Trilinos_INCLUDE_DIRS)
-
-LIST(REVERSE Trilinos_TPL_INCLUDE_DIRS)
 LIST(REMOVE_DUPLICATES Trilinos_TPL_INCLUDE_DIRS)
-LIST(REVERSE Trilinos_TPL_INCLUDE_DIRS)
-
-LIST(REVERSE Trilinos_LIBRARIES)
 LIST(REMOVE_DUPLICATES Trilinos_LIBRARIES)
-LIST(REVERSE Trilinos_LIBRARIES)
-
-LIST(REVERSE Trilinos_TPL_LIBRARIES)
 LIST(REMOVE_DUPLICATES Trilinos_TPL_LIBRARIES)
-LIST(REVERSE Trilinos_TPL_LIBRARIES)
-
-LIST(FIND Trilinos_PACKAGE_LIST STKClassic STKClassic_List_ID)
-IF (STKClassic_List_ID GREATER -1)
-  MESSAGE(FATAL_ERROR "STKClassic is no longer used and conflicts with STKIo and STKMesh.")
-ENDIF()
 
 # Set Albany branch and commit id
 EXECUTE_PROCESS(
